--- a/PrsSolution/Views/Home/Index.cshtml
+++ b/PrsSolution/Views/Home/Index.cshtml
@@ -2,30 +2,44 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<div class="">
+    <div class="col-sm-8">
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <h2>Patients</h2>
+        <div class="well">
+            <table class="table">
+                <tr>
+                    <th>Requesting Hospital</th>
+                    <th>Date of Birth</th>
+                    <th>Sex</th>
+                    <th>Medically Cleared?</th>
+                    <th>Violent?</th>
+                </tr>
+
+                <tr>
+                    <td>Mercy</td>
+                    <td>09/19/1994</td>
+                    <td>Male</td>
+                    <td>Yes</td>
+                    <td>No</td>
+                </tr>
+
+            </table>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="col-sm-4">
+        <h2>Patient Info</h2>
+        <div class="well">
+            <h3>Basic Info and Links</h3>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    @*<div class="col-sm-offset-8 col-sm-4">
+        <h2>Hospitals</h2>
+        <div class="well">
+            Daring Hospitals
+        </div>
+    </div>*@
 </div>
+@section Scripts {
+    @*Insert any script tags for this page here*@
+}
