Update to index file and added a gitignore file

--- a/PrsSolution/Views/Home/Index.cshtml
+++ b/PrsSolution/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
                     <th>Sex</th>
                     <th>Medically Cleared?</th>
                     <th>Violent?</th>
+                    <th>Accept Transfer</th>
                 </tr>
 
                 <tr>
@@ -22,6 +23,10 @@
                     <td>Male</td>
                     <td>Yes</td>
                     <td>No</td>
+                    <td>
+                        <div class="glyphicon glyphicon-ok"></div>
+                        <div class="glyphicon glyphicon-remove"></div>
+                    </td>
                 </tr>
 
             </table>
