--- a/PrsSolution/Views/Shared/_Layout.cshtml
+++ b/PrsSolution/Views/Shared/_Layout.cshtml
@@ -55,10 +55,13 @@
             <span class="moveRight">&copy; @DateTime.Now.Year - PRS</span>
         </div>
     </div>
-
+    
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="~/Scripts/Angular/app.js"></script>
+    <script src="~/Scripts/Angular/controller.js"></script>
     <script src="~/Scripts/JavaScript.js"></script>
 </body>
 </html>
