--- a/PrsSolution/Views/Home/Index.cshtml
+++ b/PrsSolution/Views/Home/Index.cshtml
@@ -25,8 +25,8 @@
                 <td>00:13</td>
                 <td>Medium</td>
                 <td>
-                    <div class="glyphicon glyphicon-ok"></div>
-                    <div class="glyphicon glyphicon-remove"></div>
+                    <a href="@Url.Action("PatientProfile", "Home")"><i class="glyphicon glyphicon-ok text-success"></i></a>
+                    <i class="glyphicon glyphicon-remove text-danger"></i>
                 </td>
             </tr>
         </table>
